--- a/app/src/main/res/layout/activity_add__ingredients.xml
+++ b/app/src/main/res/layout/activity_add__ingredients.xml
@@ -4,17 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Add_Ingredients">
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_main"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+    tools:context=".Add_Ingredients"
+    android:background="@drawable/recipe_background">
 
     <TextView
         android:id="@+id/ingredient_name_view"
