--- a/app/src/main/res/layout/activity_add__recipe__name.xml
+++ b/app/src/main/res/layout/activity_add__recipe__name.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Add_Recipe_Name">
+    tools:context=".Add_Recipe_Name"
+    android:background="@drawable/recipe_background">
+
     <TextView
         android:id="@+id/recipe_name_view"
         android:layout_width="wrap_content"
@@ -46,16 +48,5 @@
         android:layout_marginRight="167dp"
         android:layout_marginBottom="250dp"
         android:background="@drawable/done_button" />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_main"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
 
 </RelativeLayout>
