Added one more thing to Add_Ingredient

--- a/app/src/main/res/layout/activity_add__ingredients.xml
+++ b/app/src/main/res/layout/activity_add__ingredients.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Add_Ingredients">
+
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_main"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -22,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="126dp"
         android:text="Name:" />
 
     <TextView
@@ -32,9 +34,19 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="187dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="178dp"
         android:text="Amount" />
+
+    <TextView
+        android:id="@+id/ingredient_unit_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="239dp"
+        android:text="Unit" />
 
     <TextView
         android:id="@+id/ingredient_note_view"
@@ -42,8 +54,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="239dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="297dp"
         android:text="Note" />
 
     <EditText
@@ -68,6 +80,16 @@
         android:ems="10"
         android:inputType="textPersonName"
         />
+    <EditText
+        android:id="@+id/ingredient_unit_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="223dp"
+        android:layout_marginEnd="64dp"
+        android:ems="10"
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/ingredient_note_edit"
@@ -75,11 +97,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="222dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginTop="283dp"
+        android:layout_marginEnd="64dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        />
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/add_ingredient_button"
@@ -91,7 +112,7 @@
         android:layout_centerInParent="true"
         android:layout_marginEnd="218dp"
         android:layout_marginRight="218dp"
-        android:layout_marginBottom="271dp"
+        android:layout_marginBottom="200dp"
         android:background="@drawable/plus_square" />
 
     <Button
@@ -104,7 +125,7 @@
         android:layout_centerInParent="true"
         android:layout_marginEnd="94dp"
         android:layout_marginRight="94dp"
-        android:layout_marginBottom="270dp"
+        android:layout_marginBottom="200dp"
         android:background="@drawable/done_button" />
 
 
