--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -7,16 +7,23 @@
     tools:context=".Inventory"
     android:background="@drawable/inventory_background">
 
-    <Button
-        android:id="@+id/addButton"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+    <ListView
+        android:id="@+id/itemList"
+        android:layout_width="match_parent"
+        android:layout_height="594dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
+        android:layout_marginTop="-6dp"
+        android:layout_marginBottom="86dp">
+
+    </ListView>
+
+    <Button
+        android:id="@+id/addItem"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="17dp"
         android:layout_marginBottom="7dp"
         android:background="@drawable/plus_square_button" />
 
@@ -24,31 +31,20 @@
         android:id="@+id/backButton"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="300dp"
-        android:layout_marginRight="300dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="238dp"
+        android:layout_marginBottom="9dp"
+        android:layout_toStartOf="@+id/addItem"
         android:background="@drawable/back_button" />
 
     <Button
-        android:id="@+id/newUser"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/addUser"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_above="@+id/addItem"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="14dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="605dp"
         android:background="@drawable/plus_round_button" />
-
-    <ListView
-        android:id="@+id/itemList"
-        android:layout_width="match_parent"
-        android:layout_height="594dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="-6dp"
-        android:layout_marginBottom="86dp" >
-
-    </ListView>
 
 </RelativeLayout>
