--- a/app/src/main/res/layout/activity_add__recipe__name.xml
+++ b/app/src/main/res/layout/activity_add__recipe__name.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Add_Recipe_Name"
-    android:background="@drawable/recipe_background">
+    android:background="@drawable/recipe_name_background">
 
     <TextView
         android:id="@+id/recipe_name_view"
@@ -14,9 +14,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="150dp"
+        android:layout_marginTop="149dp"
+        android:layout_marginEnd="142dp"
         android:text="Recipe's Name"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="97dp" />
@@ -28,9 +29,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="198dp"
-        android:layout_marginEnd="91dp"
-        android:ems="10"
+        android:layout_marginTop="197dp"
+        android:layout_marginEnd="66dp"
+        android:ems="13"
         android:gravity="start|top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
