--- a/app/src/main/res/layout/activity_add__ingredients.xml
+++ b/app/src/main/res/layout/activity_add__ingredients.xml
@@ -4,62 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-<<<<<<< HEAD
-    tools:context=".Add_Ingredients">
+    tools:context=".Add_Ingredients"
+    android:background="@drawable/add_ingredient_background">
 
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_main"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
-
-    <TextView
-        android:id="@+id/ingredient_name_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="49dp"
-        android:layout_marginTop="126dp"
-        android:text="Name:" />
-
-    <TextView
-        android:id="@+id/ingredient_amount_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="178dp"
-        android:text="Amount" />
-
-    <TextView
-        android:id="@+id/ingredient_unit_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="239dp"
-        android:text="Unit" />
-
-    <TextView
-        android:id="@+id/ingredient_note_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="297dp"
-        android:text="Note" />
-
-    <EditText
+     <EditText
         android:id="@+id/ingredient_name_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -68,8 +16,7 @@
         android:layout_marginTop="111dp"
         android:layout_marginEnd="61dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/edtx1"/>
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/ingredient_amount_edit"
@@ -77,11 +24,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="161dp"
+        android:layout_marginTop="170dp"
         android:layout_marginEnd="61dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/edtx2"
+        android:inputType="number"
         />
     <EditText
         android:id="@+id/ingredient_unit_edit"
@@ -89,11 +35,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="223dp"
+        android:layout_marginTop="230dp"
         android:layout_marginEnd="64dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="@string/edtx3"/>
+        android:hint="gram, oz, litter"/>
 
     <EditText
         android:id="@+id/ingredient_note_edit"
@@ -104,8 +50,7 @@
         android:layout_marginTop="283dp"
         android:layout_marginEnd="64dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/edtx4"/>
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/add_ingredient_button"
@@ -132,122 +77,6 @@
         android:layout_marginRight="94dp"
         android:layout_marginBottom="200dp"
         android:background="@drawable/done_button" />
-=======
-    tools:context=".Add_Ingredients"
-    android:background="@drawable/add_ingredient_background">
-
-    <!-- <TextView
-       android:id="@+id/ingredient_name_view"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentStart="true"
-       android:layout_alignParentTop="true"
-       android:layout_marginStart="72dp"
-       android:layout_marginTop="136dp"
-       android:text="Name" />
-
-   <TextView
-       android:id="@+id/ingredient_amount_view"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentStart="true"
-       android:layout_alignParentTop="true"
-       android:layout_marginStart="60dp"
-       android:layout_marginTop="185dp"
-       android:text="Amount" />
-
-   <TextView
-       android:id="@+id/ingredient_unit_view"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentStart="true"
-       android:layout_alignParentTop="true"
-       android:layout_marginStart="76dp"
-       android:layout_marginTop="235dp"
-       android:text="Unit" />
-
-
-   <TextView
-       android:id="@+id/ingredient_note_view"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentStart="true"
-       android:layout_alignParentTop="true"
-       android:layout_marginStart="75dp"
-       android:layout_marginTop="290dp"
-       android:text="Note" /> -->
-
-   <EditText
-       android:id="@+id/ingredient_name_edit"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentTop="true"
-       android:layout_alignParentEnd="true"
-       android:layout_marginTop="113dp"
-       android:layout_marginEnd="61dp"
-       android:ems="10"
-       android:inputType="textPersonName" />
-
-   <EditText
-       android:id="@+id/ingredient_amount_edit"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentTop="true"
-       android:layout_alignParentEnd="true"
-       android:layout_marginTop="170dp"
-       android:layout_marginEnd="61dp"
-       android:ems="10"
-       android:inputType="number"
-       />
-
-   <EditText
-       android:id="@+id/ingredient_unit_edit"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentTop="true"
-       android:layout_alignParentEnd="true"
-       android:layout_marginTop="230dp"
-       android:layout_marginEnd="61dp"
-       android:ems="10"
-       android:inputType="textPersonName" />
-
-   <EditText
-       android:id="@+id/ingredient_note_edit"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentTop="true"
-       android:layout_alignParentEnd="true"
-       android:layout_marginTop="290dp"
-       android:layout_marginEnd="61dp"
-       android:ems="10"
-       android:inputType="textPersonName" />
-
-   <Button
-       android:id="@+id/add_ingredient_button"
-       android:layout_width="60dp"
-       android:layout_height="60dp"
-       android:layout_alignParentEnd="true"
-       android:layout_alignParentRight="true"
-       android:layout_alignParentBottom="true"
-       android:layout_centerInParent="true"
-       android:layout_marginEnd="218dp"
-       android:layout_marginRight="218dp"
-       android:layout_marginBottom="271dp"
-       android:background="@drawable/plus_square_button" />
-
-   <Button
-       android:id="@+id/done_ingredient_button"
-       android:layout_width="60dp"
-       android:layout_height="60dp"
-       android:layout_alignParentEnd="true"
-       android:layout_alignParentRight="true"
-       android:layout_alignParentBottom="true"
-       android:layout_centerInParent="true"
-       android:layout_marginEnd="94dp"
-       android:layout_marginRight="94dp"
-       android:layout_marginBottom="270dp"
-       android:background="@drawable/done_button" />
->>>>>>> master
 
 
 </RelativeLayout>
