--- a/app/src/main/res/layout/activity_add__recipe__direction.xml
+++ b/app/src/main/res/layout/activity_add__recipe__direction.xml
@@ -4,23 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-<<<<<<< HEAD
-    tools:context=".Add_Recipe_Direction">
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_main"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
-=======
     tools:context=".Add_Recipe_Direction"
     android:background="@drawable/recipe_background">
-
->>>>>>> master
 
     <TextView
         android:id="@+id/recipe_direction_view"
@@ -28,14 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-<<<<<<< HEAD
         android:layout_marginTop="100dp"
+        android:textSize="20dp"
         android:text="Cooking Direction" />
-=======
-        android:layout_marginTop="113dp"
-        android:text="Cooking Direction"
-        android:textSize="20dp"/>
->>>>>>> master
 
     <EditText
         android:id="@+id/recipe_direction_input"
@@ -56,15 +36,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-<<<<<<< HEAD
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
-        android:layout_marginBottom="53dp"
-=======
-        android:layout_marginEnd="167dp"
-        android:layout_marginRight="167dp"
-        android:layout_marginBottom="250dp"
->>>>>>> master
+        android:layout_marginEnd="182dp"
+        android:layout_marginRight="182dp"
+        android:layout_marginBottom="257dp"
         android:background="@drawable/done_button" />
 
 </RelativeLayout>
