--- a/app/src/main/res/layout/activity_add__recipe__name.xml
+++ b/app/src/main/res/layout/activity_add__recipe__name.xml
@@ -4,13 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-<<<<<<< HEAD
-    tools:context=".Add_Recipe_Name">
-=======
     tools:context=".Add_Recipe_Name"
     android:background="@drawable/recipe_name_background">
 
->>>>>>> master
     <TextView
         android:id="@+id/recipe_name_view"
         android:layout_width="wrap_content"
@@ -18,19 +14,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-<<<<<<< HEAD
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="150dp"
         android:text="Recipe's Name"
-=======
         android:layout_marginTop="149dp"
         android:layout_marginEnd="142dp"
-        android:text="Recipe's Name"
-        android:textSize="20dp"
->>>>>>> master
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="97dp" />
+        android:textSize="20dp" />
 
     <EditText
         android:id="@+id/recipe_name_edit"
@@ -39,15 +26,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-<<<<<<< HEAD
-        android:layout_marginTop="198dp"
-        android:layout_marginEnd="91dp"
-        android:ems="10"
-=======
         android:layout_marginTop="197dp"
         android:layout_marginEnd="66dp"
         android:ems="13"
->>>>>>> master
         android:gravity="start|top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,18 +47,4 @@
         android:layout_marginBottom="250dp"
         android:background="@drawable/done_button" />
 
-<<<<<<< HEAD
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_main"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
-
-=======
->>>>>>> master
 </RelativeLayout>
