--- a/app/src/main/res/layout/activity_recipe__main.xml
+++ b/app/src/main/res/layout/activity_recipe__main.xml
@@ -14,7 +14,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="63dp" />
+        android:layout_marginTop="58dp"
+        android:layout_marginBottom="100dp" />
 
 
     <Button
@@ -24,9 +25,19 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginRight="11dp"
+        android:layout_marginBottom="48dp"
         android:background="@drawable/plus_square" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="35dp"
+        android:paddingRight="5dp"
+        android:text="# of missing ingredients"
+        android:textAlignment="textEnd"
+        android:textColor="#FFFFFF" />
 
 </RelativeLayout>
