--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,12 +46,15 @@
 
     <Button
         android:id="@+id/logoutBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_above="@+id/inventory"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="6dp"
-        android:text="Logout " />
+        android:layout_marginBottom="91dp"
+        android:background="@drawable/logout_button" />
 
 
 </RelativeLayout>
