--- a/app/src/main/res/layout/activity_recipe__main.xml
+++ b/app/src/main/res/layout/activity_recipe__main.xml
@@ -25,9 +25,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginEnd="338dp"
+        android:layout_marginRight="338dp"
+        android:layout_marginBottom="49dp"
         android:background="@drawable/plus_square" />
 
     <TextView
@@ -38,6 +38,6 @@
         android:paddingRight="5dp"
         android:text="# of missing ingredients"
         android:textAlignment="textEnd"
-        android:textColor="#FFFFFF" />
+        android:textColor="#eddbcd" />
 
 </RelativeLayout>
