--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -39,6 +39,18 @@
         android:layout_toStartOf="@+id/doneButton"
         android:background="@drawable/back_button" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="173dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="60dp"
+        android:layout_toStartOf="@+id/addUser"
+        android:text="TextView" />
+
     <ListView
         android:id="@+id/itemList"
         android:layout_width="match_parent"
