--- a/app/src/main/res/layout/activity_grocery_list.xml
+++ b/app/src/main/res/layout/activity_grocery_list.xml
@@ -1,22 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Grocery"
-    android:background="@drawable/grocery_background">
+    tools:context=".Inventory"
+    android:background="@drawable/inventory_background">
 
     <Button
         android:id="@+id/addItem"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="344dp"
         android:layout_marginEnd="17dp"
         android:layout_marginBottom="7dp"
         android:background="@drawable/plus_square_button" />
+
+    <Button
+        android:id="@+id/addUser"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_above="@+id/addItem"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="-2dp"
+        android:layout_marginBottom="615dp"
+        android:background="@drawable/plus_round_button" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="351dp"
+        android:layout_marginBottom="8dp"
+        android:layout_toStartOf="@+id/doneButton"
+        android:background="@drawable/back_button" />
 
     <ListView
         android:id="@+id/itemList"
@@ -27,5 +48,6 @@
         android:layout_marginBottom="86dp">
 
     </ListView>
+
 
 </RelativeLayout>
