--- a/app/src/main/res/layout/activity_add_item_grocery.xml
+++ b/app/src/main/res/layout/activity_add_item_grocery.xml
@@ -59,7 +59,7 @@
         android:layout_marginEnd="61dp"
         android:hint="12"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         />
 
     <EditText
